# VNeseASR

./: Dockerfile  README.md  fl_build_shared_library.patch
PnkSpeechToText/: CMakeLists.txt  Modules.cpp  Modules.h  PnkS2t.cpp  PnkS2t.h  README.md  Session.cpp  Session.h  config.h
PnkSpeechToText/config/: pnks2t.cfg
PnkSpeechToText/examples/: CMakeLists.txt  audioFileExample.cpp  microphoneExample.cpp  socketExample.cpp  websocketExample.cpp
PnkSpeechToText/models/asr/: CMakeLists.txt  InferenceModule.cpp  InferenceModule.h  ModuleParameter.cpp  ModuleParameter.h  ModuleProcessingState.cpp  ModuleProcessingState.h  module.h
PnkSpeechToText/models/asr/decoder/: CMakeLists.txt  Decoder.cpp  Decoder.h
PnkSpeechToText/models/asr/feature/: CMakeLists.txt  LogMelFeature.cpp  LogMelFeature.h  feature.h
PnkSpeechToText/models/asr/nn/: CMakeLists.txt  Conv1d.cpp  Conv1d.h  Identity.cpp  Identity.h  LayerNorm.cpp  LayerNorm.h  Linear.cpp  Linear.h  LocalNorm.cpp  LocalNorm.h  Relu.cpp  Relu.h  Residual.cpp  Residual.h  Sequential.cpp  Sequential.h  TDSBlock.cpp  TDSBlock.h  nn.h
PnkSpeechToText/models/asr/nn/backend/fbgemm/: CMakeLists.txt  Conv1dFbGemm.cpp  Conv1dFbGemm.h  LinearFbGemm.cpp  LinearFbGemm.h  PackedGemmMatrixFP16.cpp  fbgemm.h
PnkSpeechToText/models/asr/nn/backend/fbgemm/cmake/: BuildFbGemm.cmake
PnkSpeechToText/models/text_correction/: CMakeLists.txt  Corrector.cpp  Corrector.h  KenLm.cpp  KenLm.h  Regex.h  WordToNum.cpp  WordToNum.h
PnkSpeechToText/models/text_correction/punctner/: CMakeLists.txt  PunctNer.cpp  PunctNer.h  tf.c  tf.h
PnkSpeechToText/plugins/: AudioBuffer.h  CMakeLists.txt  Resample.h
PnkSpeechToText/plugins/files/: FilePlugin.cpp  FilePlugin.h
PnkSpeechToText/plugins/microphone/: MicroPlugin.cpp  MicroPlugin.h
PnkSpeechToText/plugins/socket/: SocketPlugin.cpp  SocketPlugin.h
PnkSpeechToText/plugins/websocket/: WebSocket.cpp  WebSocket.h  WebSocketPlugin.cpp  WebSocketPlugin.h
PnkSpeechToText/utils/: CMakeLists.txt  DataType.cpp  DefaultMemoryManager.cpp  DefaultMemoryManager.h  Functions.h  IOBuffer.cpp  common.h  cqueue.h
Punc_Ner/: layers.py  logger.py  loss_function.py  model.py  model_without_focal_loss.py  preprocessing.py  test.py  train_BiLSTM_Attention_focal_loss_model.py  train_BiLSTM_Attention_model.py  train_BiLSTM_CRF__focal_loss_model.py  train_BiLSTM_CRF_model.py  train_BiLSTM_CRF_model_punc.py  train_BiLSTM_Multitask_model.py  train_BiLSTM_focal_loss_model.py  train_BiLSTM_model.py
